[리펙토링] ifPresentOrElse